tests/invalid/annotation_generic_deque_unsupported/main.py
def run_case() -> None:
    bad: deque[int] = 0


if __name__ == "__main__":
    run_case()
